fixed responsiveness and fixed spacing in main.css

--- a/main.css
+++ b/main.css
@@ -8,16 +8,17 @@ body {
 }
 
 #container {
+  max-width: 100%;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .card {
-  width: 30%;
+  width: 25%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  padding: 12px 16px;
+  padding: 6px 8px;
   margin: 5px;
   background-color: #03a9f4;
 }
@@ -38,10 +39,16 @@ img {
 }
 
 .pricing {
+  margin: 0;
+  padding: 0;
+  line-height: 20px;
   font-weight: bold;
 }
 
-.specs {
+.specs p {
+  margin: 0;
+  padding: 0;
+  line-height: 20px;
   font-weight: bold;
 }
 
@@ -58,9 +65,14 @@ img {
   background-color: grey;
   font-family: "Roboto Mono", monospace;
 }
+@media screen and (max-width: 768px) {
+  .card {
+    width: 40%;
+  }
+}
 
-@media (max-width: 600px) {
-  #container {
-    flex: 1 46%;
+@media screen and (max-width: 350px) {
+  .card {
+    width: 100%;
   }
 }
